--- a/src/component/block/button/primary/style.scss
+++ b/src/component/block/button/primary/style.scss
@@ -2,9 +2,9 @@
 
 .button__primary {
   background: transparent;
-  border: 1px solid $color-cta;
+  border: 1px solid $color-blue1;
   border-radius: 5px;
-  color: $color-cta;
+  color: $color-blue1;
   display: inline-block;
   font-family: $font-stack-normal;
   font-size: 12px;
@@ -13,8 +13,8 @@
   transition: all 0.3s ease;
 
   &:hover {
-    background-color: $color-cta;
-    border: 1px solid $color-cta;
+    background-color: $color-blue1;
+    border: 1px solid $color-blue1;
     color: $color-white;
   }
 }
