--- a/src/asset/grid/style.scss
+++ b/src/asset/grid/style.scss
@@ -1,25 +1,23 @@
-.container {
-  padding: 40px;
+.grid_container {
+  margin: 0 auto;
+  min-width: 480px;
 }
 
-.row {
+// .grid_padding {
+//   padding: 24px;
+// }
+
+.grid_row {
   display: flex;
   flex-flow: row wrap;
 }
 
-.col {
+.grid_col {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-
-  // .spaced {
-  //   margin: 0 12px;
-  // }
 }
 
-.spaced {
-  margin: 0 12px;
-}
 
 // 12 col grid system
 .col1 {
@@ -59,19 +57,23 @@
   width: 100%;
 }
 
+
 /* Smartphones (landscape) ----------- */
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
+
+  .col1,
+  .col2,
   .col3,
   .col4,
   .col5,
   .col6,
+  .col7,
   .col8,
   .col9,
-  .col10 {
+  .col0,
+  .col11,
+  .col12 {
     width: 100%;
   }
 
-  .spaced {
-    margin: 0;
-  }
 }
