--- a/src/component/block/list/sidebar/style.scss
+++ b/src/component/block/list/sidebar/style.scss
@@ -16,9 +16,10 @@
       color: $color-grey5;
       display: block;
       padding: 12px 24px;
+      text-decoration: none;
 
       &:hover {
-        color: $color-black;
+        color: $color-black2;
       }
     }
   }
