--- a/src/component/block/typography/header-link/style.scss
+++ b/src/component/block/typography/header-link/style.scss
@@ -10,9 +10,10 @@
 
     a {
       color: $color-grey5;
+      text-decoration: none;
 
       &:hover {
-        color: $color-black;
+        color: $color-black2;
         padding-bottom: 6px;
       }
     }
