--- a/src/asset/grid.scss
+++ b/src/asset/grid.scss
@@ -1,23 +1,25 @@
-.grid_col {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+.container {
+  padding: 40px;
 }
 
-.grid_container {
-  margin: 0 auto;
-  min-width: 480px;
-}
-
-.grid_padding {
-  padding: 48px;
-}
-
-.grid_row {
+.row {
   display: flex;
   flex-flow: row wrap;
 }
 
+.col {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+
+  // .spaced {
+  //   margin: 0 12px;
+  // }
+}
+
+.spaced {
+  margin: 0 12px;
+}
 
 // 12 col grid system
 .col1 {
@@ -57,27 +59,19 @@
   width: 100%;
 }
 
-
 /* Smartphones (landscape) ----------- */
-@media screen and (max-width: 768px) {
-
-  .col1,
-  .col2,
+@media screen and (max-width: 1024px) {
   .col3,
   .col4,
   .col5,
   .col6,
-  .col7,
   .col8,
   .col9,
-  .col0,
-  .col11,
-  .col12 {
+  .col10 {
     width: 100%;
   }
 
-  .grid_padding {
-    padding: 24px;
+  .spaced {
+    margin: 0;
   }
-
 }
