--- a/src/component/block/card/info/style.scss
+++ b/src/component/block/card/info/style.scss
@@ -1,9 +1,36 @@
 @import '../../../../asset/base.scss';
 
 .card__info {
-  background: $color-white;
+  border: 1px solid $color-grey2;
   border-radius: 6px;
   box-shadow: 0 2px 8px $color-grey2;
-  padding: 24px;
-  width: 250px;
+  margin-bottom: 24px;
+  width: 100%;
+
+  img {
+    padding: 32px 0;
+  }
+  
+  span:first-child {
+    background: $color-grey2;
+    display: block;
+    text-align: center;
+  }
+
+  span:nth-child(2) {
+    background: $color-white;
+    border-radius: 6px;
+    display: block;
+    padding: 24px 24px 12px;
+  }
+}
+
+
+// desktop
+@media screen and (min-width: 580px) {
+
+  .card__info {
+    width: 250px;
+  }
+
 }
